--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
     margin: 0 auto;
     /* text-align: center; */
   }
+  li{
+    padding-bottom: 5px;
+  }
 
   nav ul.navbar-ul li.navbar-li {
     counter-increment: none; /* Remove the counter-increment for the navbar */
