--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 </div>
 <div class="container"></div>
 
-<img class = "profile_foto" src="fotoperfil.jpg" alt="Foto de perfil" >
+<img class = "profile_foto" src="images/fotoperfil.jpg" alt="Foto de perfil" >
 
 <h1>Raúl Gutiérrez</h1>
 
@@ -245,10 +245,10 @@
 <hr>
 <h3 id = "contact">Contact</h3>
 <p>
-  <a href="https://www.github.com/rayguti" target="_blank"><img src="github.png" alt="github" width="50" height="50"></a>
-  <a href="https://www.linkedin.com/in/ra%C3%BAl-guti%C3%A9rrez-8a4087250/" target="_blank"> <img src="linkedln.png" alt="linkedln" width="50" height="50"> </a>
-  <img src="gmail.png" onclick="mostrarModalCorreo()" alt="gmail" width="50" height="50">
-  <img src="telephone.png" onclick="mostrarModalTel()" alt="telephone" width="50" height="50">
+  <a href="https://www.github.com/rayguti" target="_blank"><img src="images/github.png" alt="github" width="50" height="50"></a>
+  <a href="https://www.linkedin.com/in/ra%C3%BAl-guti%C3%A9rrez-8a4087250/" target="_blank"> <img src="images/linkedln.png" alt="linkedln" width="50" height="50"> </a>
+  <img src="images/gmail.png" onclick="mostrarModalCorreo()" alt="gmail" width="50" height="50">
+  <img src="images/telephone.png" onclick="mostrarModalTel()" alt="telephone" width="50" height="50">
 
 </p>
 
